--- a/layout.css
+++ b/layout.css
@@ -53,3 +53,38 @@ body {
   margin-top: 40px;
   color: #777;
 }
+
+.sidebar {
+  width: 200px;
+  height: 100vh;
+  background-color: #243343;
+  color: white;
+  position: fixed;
+  left: 0;
+  top: 0;
+  padding: 20px;
+}
+
+.sidebar h2 {
+  margin-bottom: 30px;
+}
+
+.sidebar ul {
+  list-style: none;
+  padding: 0;
+}
+
+.sidebar ul li {
+  margin: 15px 0;
+}
+
+.sidebar ul li a {
+  color: white;
+  text-decoration: none;
+}
+
+.main-content {
+  margin-left: 220px;
+  padding: 20px;
+}
+
